--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carro",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "./src/server.js",
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.4.3",
