--- a/src/docs/paths.yml
+++ b/src/docs/paths.yml
@@ -53,4 +53,4 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/InternalServerError
+                $ref: '#/components/schemas/InternalServerError'
