--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "carro",
   "version": "1.0.0",
+  "description": "",
   "main": "./src/server.js",
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "NODE_ENV=test mocha --timeout 5000 --recursive test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -21,7 +20,8 @@
     "express-handlebars": "^7.1.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
+    "mongodb-memory-server": "^10.1.2",
+    "mongoose": "^8.7.3",
     "mongoose-paginate-v2": "^1.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -34,5 +34,12 @@
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1"
   },
-  "description": ""
+  "devDependencies": {
+    "@faker-js/faker": "^9.1.0",
+    "chai": "^4.5.0",
+    "chai-http": "^5.1.1",
+    "mocha": "^10.7.3",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
+  }
 }
